[fix] show jump links on project and publication pages

--- a/web/app/themes/limerock/src/scss/_editor-base.scss
+++ b/web/app/themes/limerock/src/scss/_editor-base.scss
@@ -45,6 +45,7 @@
 .acf-field-group-block-page-header-jump-links {
   display: none;
 
+  .post-type-publication &,
   .post-type-event &,
   .post-type-project & {
     display: block;
