--- a/web/app/themes/limerock/views/blocks/page-header/page-header.scss
+++ b/web/app/themes/limerock/views/blocks/page-header/page-header.scss
@@ -396,6 +396,8 @@
     align-items: center;
   }
 
+  .single-publication &,
+  .single-project &,
   .single-event &,
   .single-person & {
     .block_image-and-text-callout {
